// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabPanel renders correctly with className 1`] = `
<div
  className="tabPanelsWrapper tab-panels--wrapper"
  data-testid="tab-panels"
  id=""
>
  <div
    className="tabPanelWrapper tab-panel--wrapper tabPanel tab-panel active active animationDirectionRtl animation-direction-rtl test"
    data-testid="tab-panel"
    id=""
    role="tabpanel"
  >
    First
  </div>
</div>
`;

exports[`TabPanel renders correctly with empty props 1`] = `
<div
  className="tabPanelsWrapper tab-panels--wrapper"
  data-testid="tab-panels"
  id=""
>
  <div
    className="tabPanelWrapper tab-panel--wrapper tabPanel tab-panel active active animationDirectionRtl animation-direction-rtl"
    data-testid="tab-panel"
    id=""
    role="tabpanel"
  >
    First
  </div>
</div>
`;

exports[`TabPanel renders correctly with id 1`] = `
<div
  className="tabPanelsWrapper tab-panels--wrapper"
  data-testid="tab-panels"
  id=""
>
  <div
    className="tabPanelWrapper tab-panel--wrapper tabPanel tab-panel active active animationDirectionRtl animation-direction-rtl"
    data-testid="tab-panel_test"
    id="test"
    role="tabpanel"
  >
    First
  </div>
</div>
`;
